# extension_processor

./: .dockerignore  .gitattributes  CMakeLists.txt  Docker.md  Dockerfile  README.md
include/: processor.h  processor.hpp
src/: main.cpp  processor.cpp
src/generator/: gitattributes_generator.cpp  gitattributes_generator.hpp
tests/: test_processor.cpp
